--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ a {
 }
 
 body {
+  font-family: "Open Sans", sans-serif;
 }
 
 header {
@@ -36,7 +37,29 @@ flex-direction: column;
 }
 
 .header-wrap__img {
-  width: 7.8%;
+  width: 8.5%;
+  padding-bottom: 1rem;
+}
+
+.nav-bar {
+  padding-bottom: 1rem;
+}
+
+.nav-bar a {
+  font-size: 1.3rem;
+  border-right: solid 1px #FFFFFF;
+  padding: 0 1.5rem 0 1.5rem;
+  color: #E7F6E9;
+}
+
+#news,
+#foundation {
+  border: none;
+}
+
+#foundation {
+  background-color: #007400;
+  padding: 1rem 1.5rem 1.8rem;
 }
 
 main {
@@ -56,6 +79,7 @@ main {
 .main-wrap a {
   color: #007400;
 }
+
 footer {
   display: flex;
   flex-direction: column;
