--- a/main.css
+++ b/main.css
@@ -8,10 +8,6 @@ html {
   font-size: 10px;
 }
 
-p {
-  font-size: 1.4rem;
-}
-
 a {
   text-decoration: none;
   color: #FFFFFF;
@@ -66,18 +62,39 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.7em;
+  line-height: 3rem;
 }
 
 .main-wrap {
+  box-sizing: border-box;
   max-width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 5.5rem;
 }
 
 .main-wrap a {
   color: #007400;
+}
+
+.main-wrap__a {
+  background-color: #E7F6E9;
+  margin: 3rem 0 3rem;
+  padding: 11px 94px;
+  font-weight: 500;
+  font-size: 2.5rem;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+button {
+  background-color: #007400;
 }
 
 footer {
