--- a/main.css
+++ b/main.css
@@ -8,13 +8,13 @@ html {
   font-size: 10px;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
 a {
   text-decoration: none;
   color: #FFFFFF;
-}
-
-body {
-  font-family: "Open Sans", sans-serif;
 }
 
 header {
@@ -44,7 +44,7 @@ flex-direction: column;
 .nav-bar a {
   font-size: 1.3rem;
   border-right: solid 1px #FFFFFF;
-  padding: 0 1.5rem 0 1.5rem;
+  padding: 0 15px 0 15px;
   color: #E7F6E9;
 }
 
@@ -59,6 +59,7 @@ flex-direction: column;
 }
 
 main {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,9 +67,13 @@ main {
   line-height: 3rem;
 }
 
+main p {
+  font-size: 2rem;
+}
+
 .main-wrap {
   box-sizing: border-box;
-  max-width: 50%;
+  max-width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,8 +98,50 @@ h1 {
   font-weight: 500;
 }
 
+.main-wrap__article {
+  display: flex;
+  justify-content: center;
+  width: 75%;
+}
+
+.main-wrap__aside {
+  text-align: center;
+}
+
 button {
   background-color: #007400;
+  color: #FFFFFF;
+  font-size: 2.3rem;
+  height: 82px;
+  padding: 0 30px 0 30px;
+  margin: 20px 14px 3px 14px;
+}
+
+span {
+  display: block;
+  font-size: 1.2rem;
+}
+
+.main-wrap__aside a {
+  display: inline-block;
+  font-size: 1.2rem;
+  border-right: solid 1px #AAA3A4;
+  padding: 0 5px 0 1px;
+}
+
+#api-docs {
+  border: none;
+}
+
+.article-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.article-two p {
+    margin: 2.5rem 0 1.25rem;
 }
 
 footer {
@@ -103,6 +150,7 @@ footer {
   justify-content: center;
   align-items: center;
   height: 128px;
+  margin-top: 4.5rem;
   background-color: #333333;
 }
 
