Add footer styling and hover states

--- a/main.css
+++ b/main.css
@@ -26,6 +26,9 @@ header {
 }
 
 .header-wrap {
+width: 100%;
+max-width: 980px;
+margin: 0 auto;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -33,12 +36,12 @@ flex-direction: column;
 }
 
 .header-wrap__img {
-  width: 8.5%;
+  width: 14.5%;
   padding-bottom: 1rem;
 }
 
 .nav-bar {
-  padding-bottom: 1rem;
+  margin-bottom: 2.5rem;
 }
 
 .nav-bar a {
@@ -48,6 +51,10 @@ flex-direction: column;
   color: #E7F6E9;
 }
 
+.nav-bar a:hover {
+  text-decoration: underline;
+}
+
 #news,
 #foundation {
   border: none;
@@ -55,7 +62,7 @@ flex-direction: column;
 
 #foundation {
   background-color: #007400;
-  padding: 1rem 1.5rem 1.8rem;
+  padding: 1rem 1.5rem 2rem;
 }
 
 main {
@@ -85,12 +92,21 @@ main p {
   color: #007400;
 }
 
-.main-wrap__a {
+.main-wrap__a:hover {
+  background-color: #007400;
+  color: #FFFFFF;
+}
+
+#main-wrap__a {
   background-color: #E7F6E9;
   margin: 3rem 0 3rem;
   padding: 11px 94px;
   font-weight: 500;
   font-size: 2.5rem;
+}
+
+#main-wrap__a:hover {
+  background-color: #007400;
 }
 
 h1 {
@@ -117,6 +133,10 @@ button {
   margin: 20px 14px 3px 14px;
 }
 
+button:hover {
+  background-color: #009600;
+}
+
 span {
   display: block;
   font-size: 1.2rem;
@@ -129,7 +149,12 @@ span {
   padding: 0 5px 0 1px;
 }
 
-#api-docs {
+.aside__a:hover {
+  text-decoration: underline;
+}
+
+#api-docs1,
+#api-docs2 {
   border: none;
 }
 
@@ -149,15 +174,45 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 128px;
+  height: 250px;
   margin-top: 4.5rem;
   background-color: #333333;
+  font-size: 1.3rem;
+  color: #FFFFFF;
+  line-height: 3rem;
 }
 
-/* .footer__article{
-  display:
-} */
+.footer__section {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__aside {
+  display: inline-block;
+  margin-left: 213px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 
 footer img {
-  width: 17%;
+  width: 33%;
+}
+
+.footer__a {
+  border-right: solid 1px #AAA3A4;
+  padding: 0 5px 0 5px;
+}
+
+footer a {
+  color: #AAA3A4;
+}
+
+#help {
+  border: none;
+}
+
+.footer__p {
+  padding: 1rem 0 1rem;
 }
